[package]
name = "intcode"
version = "0.1.0"
authors = ["Chris Paterson <chris.paterson@metaswitch.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3"

[[bench]]
name = "intcode-benchmark"
harness = false
path = "./src/bench.rs"